[package]
name = "libp2p_test"
version = "0.1.0"
authors = ["pawan <pawandhananjay@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
bytes = "0.5.6"
futures = "0.3.1"
log = "0.4.11"
lru = "0.6"
minicbor = { version = "0.6", features = ["std", "derive"] }
rand = "0.7"
smallvec = "1.4"
unsigned-varint = { version = "0.5", features = ["std", "futures"] }
wasm-timer = "0.2"
# rand = "0.7"
env_logger = "0.8"
tokio = { version = "0.2.22", features = ["full"] }

[dependencies.libp2p]
#version = "0.23.0"
path = "/home/pawan/eth2/rust-libp2p"
default-features = false
features = ["identify", "mplex", "noise", "tcp-tokio", "request-response"]